# claude-gemini-collaboration

./: .gitignore  CLAUDE-en.md  CLAUDE.md  COLLABORATION-RULES.md  GEMINI-en.md  GEMINI.md  Makefile  Makefile.console  README-en.md  README.md  Serena_MCP_활용가이드.md  baseball.py  doc-consistency.md  hello_world.py  implementation-guidelines.md  rps_game.cpp  rps_game_v2.cpp  verification-protocol.md
.claude/: settings.local.json
.claude/agents/: aws-cloud-architect.md  c-expert.md  code-dispatcher.md  cpp-expert.md  doc-generator.md  dotnet-expert.md  format-dispatcher.md  frontend-expert.md  go-expert.md  mongodb-expert.md  mysql-expert.md  nodejs-expert.md  postgresql-expert.md  project-analyzer.md  project-documentation-specialist.md  python-expert.md  redis-expert.md  spreadsheet-expert.md  sqlite-expert.md  typescript-expert.md  unity-expert.md  unreal-expert.md
.kb/: README-en.md  README.md
.kb/adr/: ADR-001-gemini-claude-collaboration-protocol.md  ADR-001-user-centered-collaboration.md  TEMPLATE.md
.kb/design/: EXAMPLE-user-authentication-flow.md  TEMPLATE.md  claude-code-subagents.md  data-pipeline-workflows.md  database-language-collaboration.md
.kb/problem-solving/: EXAMPLE-cors-configuration-fix.md  TEMPLATE.md
.kb/projects/code-generator/: project-overview.md  spec.md
.kb/projects/protocol-meta/: gemini-claude-collaboration-log-en.md  gemini-claude-collaboration-log.md  review-README-en.md  review-README.md
.kb/projects/tetris_v2/: architecture-request.md  collaboration-process.md  project-overview.md  spec.md
.kb/projects/tetris_v3/: review-v1.md  review-v2.md  review-v3.md  spec-fix-docs.md  spec.md
.kb/sessions/2025-08-18-tetris-development/: review-bug-v3.md
.kb/sessions/2025-08-18-tetris-v3-validation/: session-log.md
.kb/sessions/baseball-game/: collaboration-log.md  spec-v1.md
.kb/sessions/rps-game/: collaboration-log.md  review-bug-v1.md  spec-v1.md
.kb/sessions/tetris-game/: collaboration-log.md  review-bug-v1.md  review-bug-v2.md  spec-v1.md
.kb/sessions/word-counter/: collaboration-log.md  review-bug-v1.md  spec-v1.md
.kb/sessions/word-counter-development/: review-bug-v2.md
.kb/summaries/: 2025-08-13-gemini-claude-collaboration-implementation.md  TEMPLATE.md
.kb/templates/: adr-template-en.md  adr-template.md  collaboration-checklist-en.md  collaboration-checklist.md  session-log-template-en.md  session-log-template.md  specification-template-en.md  specification-template.md
.kb/workflows/project-types/: bug-fix-workflow.md  feature-development-workflow.md
include/: board.h
src/: board.cpp  board_console.cpp
tetris/: Makefile  README.md
tetris/include/: piece.h
tetris/src/: main.cpp  main_console.cpp  main_ncurses.cpp  piece.cpp
tetris_v2/: .gitignore  CMakeLists.txt  README.md
tetris_v2/assets/fonts/: README.md
tetris_v2/assets/sounds/: README.md
tetris_v2/doc/: architecture.md  deployment-guide.md  development-guide.md  project-structure.md
tetris_v2/include/TetrisV2/: Board.h  Constants.h  Game.h  Renderer.h  Tetromino.h
tetris_v2/src/: Board.cpp  Game.cpp  Renderer.cpp  Tetromino.cpp  main.cpp
tetris_v3/: CMakeLists.txt  CONTROLS.md  README.md  tetris_v3  tetris_v3_test
tetris_v3/include/: Board.h  Game.h  Input.h  Renderer.h  Tetromino.h
tetris_v3/src/: Board.cpp  Game.cpp  Input.cpp  Renderer.cpp  Tetromino.cpp  main.cpp
word_counter/: README.md
word_counter/src/: main.cpp
(+7 files in other folders)
